--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
 </head>
 <body>
 <div class="container">
-    <h1>MBTI 퀴즈</h1>
-    <div id="quiz-container">
+    <!-- 시작 페이지 (클린 UI) -->
+    <div id="start-page" class="start-page">
+        <h1>MBTI 퀴즈</h1>
         <button id="start-btn">퀴즈 시작하기</button>
+    </div>
+    <!-- 채팅 페이지 (상황극 형식) -->
+    <div id="chat-page" class="chat-page" style="display: none;">
+        <div class="header">
+            <div class="profile-icon"></div>
+            <div class="title">친구</div>
+        </div>
+        <div class="chat-container" id="chat-container">
+            <!-- 대화 내용이 표시됩니다. -->
+        </div>
+    </div>
+    <!-- 결과 페이지 (클린 UI) -->
+    <div id="result-page" class="result-page" style="display: none;">
+        <h2 id="result-text"></h2>
+        <button id="restart-btn">다시 시작하기</button>
     </div>
 </div>
 <script src="script.js"></script>
