--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <div class="container">
     <!-- 시작 페이지 (클린 UI) -->
     <div id="start-page" class="start-page">
-        <h1>MBTI 퀴즈</h1>
-        <button id="start-btn">퀴즈 시작하기</button>
+        <h1>고등학교 시뮬레이션</h1>
+        <button id="start-btn">시작하기</button>
     </div>
     <!-- 채팅 페이지 (상황극 형식) -->
     <div id="chat-page" class="chat-page" style="display: none;">
         <div class="header">
             <div class="profile-icon"></div>
-            <div class="title">친구</div>
+            <div class="title">유다정</div>
         </div>
         <div class="chat-container" id="chat-container">
             <!-- 대화 내용이 표시됩니다. -->
