--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBTI 퀴즈</title>
+    <title>고등학교 시뮬레이션</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
